# weltoly

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.tr.md  SECURITY.md  auto-imports.d.ts  components.d.ts  eslint.config.js  finapp-analiz-ve-tauri-plani.md  finapp-tauri-gelistirme-plani.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/: CODE-REVIEW-2026-07-16.md  CODE-REVIEW-2026-07-17.md  DB-ENCRYPTION-PLAN.md  RELEASE.md
src/: App.boot.test.ts  App.vue  main.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_tags.sql  003_desc.sql  004_default_wallet.sql  005_wallet_icon.sql  006_rate_source.sql  007_trns_constraints.sql
src-tauri/src/: lib.rs  main.rs  tx.rs
src/assets/: app.css
src/components/: AppEmptyState.vue  ColorSwatches.vue  ConfirmDialog.vue  DateRangeField.vue  FormDrawer.vue  HotkeysHelp.vue  IconPicker.vue  KpiCard.vue  PagePlaceholder.vue  SectionCard.vue
src/composables/: useAppBarAction.ts  useAppHotkeys.ts  useCurrentDay.test.ts  useCurrentDay.ts  useFormat.ts  useInitApp.ts  usePageHeader.ts
src/features/: README.md
src/features/auth/: LockScreen.vue  PinPad.vue  SetPinDialog.vue  dbKey.test.ts  dbKey.ts  pinCrypto.test.ts  pinCrypto.ts  useLockStore.ts
src/features/categories/: iconList.ts  pseudoCategories.ts  pseudoCategoryItem.ts  rollup.test.ts  store.ts  types.ts  utils.ts
src/features/color/: colors.ts
src/features/currencies/: crypto.test.ts  crypto.ts  freshness.test.ts  freshness.ts  list.ts  sanitizeRates.test.ts  sources.ts  store.ts  types.ts
src/features/date/: types.ts  utils.test.ts  utils.ts
src/features/demo/: seed.ts  seedTrns.test.ts
src/features/stat/: store.ts
src/features/tags/: store.ts  types.ts
src/features/theme/: palette.ts
src/features/trnForm/: store.ts  types.ts
src/features/trns/: getTrns.test.ts  getTrns.ts  reconcile.ts  store.ts  types.ts
src/features/user/: store.ts
src/features/wallets/: balanceSeries.test.ts  getCreditAvailable.test.ts  periodCompare.test.ts  store.ts  tagBreakdown.test.ts  trnFilters.test.ts  trnLink.ts  types.ts  walletMeta.ts
src/i18n/: messages.ts
src/layouts/: DefaultLayout.vue
src/pages/: CategoriesPage.vue  DashboardPage.vue  SettingsPage.vue  StatPage.vue  TagsPage.vue  TransactionsPage.vue  WalletDetailPage.vue  WalletsPage.vue
src/plugins/: echarts.ts  i18n.ts  vuetify.ts
src/plugins/vuetify/: aliases.ts  dateInputDefaults.test.ts  defaults.ts  icons.ts  index.ts  rules.test.ts  theme.ts  variations.test.ts
src/router/: index.ts
src/services/backup/: index.ts  parseBackup.test.ts
src/services/db/: bus.ts  client.ts  index.ts  mutations.test.ts  mutations.ts  outbox.ts  schema.ts  transforms.test.ts  transforms.ts  (+2 more)
src/shared/: icons.ts
src/stores/: settings.ts  ui.ts
src/styles/: settings.scss
(+48 files in other folders)
