[package]
name = "weltoly"
version = "0.1.0"
description = "Weltoly - kişisel finans uygulaması"
authors = ["stackvo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "weltoly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# SQLite: sqlx tabanlı, derlemeye GÖMÜLÜ (bundled) - Android dahil tüm platformlarda
# sistem libsqlite3'e bağımlı olmadan çalışır (analiz raporu § 14.4).
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Transactional outbox (Y-3) için: tauri-plugin-sql'in KENDİ havuzunu ödünç alıp
# tek bir sqlx::Transaction içinde çok-adımlı yazma yapıyoruz.
#
# Sürüm plugin'inkiyle AYNI OLMAK ZORUNDA (şu an 0.8.6, Cargo.lock'ta tek sqlx
# var). Ayrışırsa `Pool<Sqlite>` iki FARKLI tip olur ve plugin'in havuzu bizim
# imzalarımıza uymaz — hata da kafa karıştırıcı olur ("expected Pool, found
# Pool"). Özellikler plugin'inkiyle hizalı: bundled SQLite + tokio-rustls.
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }

[dev-dependencies]
# tx.rs testleri: sqlx async, bir runtime gerekiyor.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# "test": tauri::test::{mock_builder, mock_context, MockRuntime} — run_tx'i GERÇEK
# bir AppHandle ve GERÇEK sql plugin'i ile çalıştırmak için. Bu olmadan komutun
# kendisi (havuz araması, serde, plugin uyumu) hiç test edilemez; yalnız içindeki
# sqlx akışı test edilebilir ki asıl risk orada DEĞİL.
tauri = { version = "2", features = ["test"] }
